--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -17,7 +17,10 @@
     "esbenp.prettier-vscode",
     "johnpapa.vscode-peacock",
     "jpoissonnier.vscode-styled-components",
+    "mindaro.mindaro",
+    "mindaro-dev.file-downloader",
     "ms-azuretools.vscode-docker",
+    "ms-kubernetes-tools.vscode-kubernetes-tools",
     "ms-vscode.vscode-typescript-tslint-plugin",
     "ms-vscode-remote.remote-containers",
     "ms-vscode-remote.remote-ssh",
@@ -25,8 +28,11 @@
     "ms-vscode-remote.remote-wsl",
     "ms-vscode-remote.vscode-remote-extensionpack",
     "ms-vsliveshare.vsliveshare",
+    "ms-vsliveshare.vsliveshare-audio",
+    "ms-vsliveshare.vsliveshare-pack",
     "mutantdino.resourcemonitor",
     "orta.vscode-jest",
+    "redhat.vscode-yaml",
     "stylelint.vscode-stylelint",
     "vscode-icons-team.vscode-icons",
     "wallabyjs.quokka-vscode"
