--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -573,7 +573,10 @@
     "esbenp.prettier-vscode",
     "johnpapa.vscode-peacock",
     "jpoissonnier.vscode-styled-components",
+    "mindaro.mindaro",
+    "mindaro-dev.file-downloader",
     "ms-azuretools.vscode-docker",
+    "ms-kubernetes-tools.vscode-kubernetes-tools",
     "ms-vscode.vscode-typescript-tslint-plugin",
     "ms-vscode-remote.remote-containers",
     "ms-vscode-remote.remote-ssh",
@@ -581,8 +584,11 @@
     "ms-vscode-remote.remote-wsl",
     "ms-vscode-remote.vscode-remote-extensionpack",
     "ms-vsliveshare.vsliveshare",
+    "ms-vsliveshare.vsliveshare-audio",
+    "ms-vsliveshare.vsliveshare-pack",
     "mutantdino.resourcemonitor",
     "orta.vscode-jest",
+    "redhat.vscode-yaml",
     "stylelint.vscode-stylelint",
     "vscode-icons-team.vscode-icons",
     "wallabyjs.quokka-vscode"
@@ -591,7 +597,7 @@
   // The log level for the extension.
   "remote.containers.logLevel": "trace",
 
-  // When enabled extensions are downloaded locally and installed on remote.
+  // Whether enabled extensions are downloaded locally and installed on remote.
   "remote.downloadExtensionsLocally": false,
 
   // // Override the kind of an extension.
@@ -608,16 +614,22 @@
     "esbenp.prettier-vscode": ["workspace"],
     "johnpapa.vscode-peacock": ["workspace"],
     "jpoissonnier.vscode-styled-components": ["workspace"],
+    "mindaro.mindaro": ["workspace"],
+    "mindaro-dev.file-downloader": ["workspace"],
     "ms-azuretools.vscode-docker": ["workspace"],
+    "ms-kubernetes-tools.vscode-kubernetes-tools": ["workspace"],
     "ms-vscode.vscode-typescript-tslint-plugin": ["workspace"],
-    "ms-vscode-remote.remote-containers": ["workspace"],
-    "ms-vscode-remote.remote-ssh": ["workspace"],
-    "ms-vscode-remote.remote-ssh-edit": ["workspace"],
-    "ms-vscode-remote.remote-wsl": ["workspace"],
-    "ms-vscode-remote.vscode-remote-extensionpack": ["workspace"],
+    "ms-vscode-remote.remote-containers": ["ui"],
+    "ms-vscode-remote.remote-ssh": ["ui"],
+    "ms-vscode-remote.remote-ssh-edit": ["ui"],
+    "ms-vscode-remote.remote-wsl": ["ui"],
+    "ms-vscode-remote.vscode-remote-extensionpack": ["ui"],
     "ms-vsliveshare.vsliveshare": ["workspace"],
+    "ms-vsliveshare.vsliveshare-audio": ["workspace"],
+    "ms-vsliveshare.vsliveshare-pack": ["workspace"],
     "mutantdino.resourcemonitor": ["workspace"],
     "orta.vscode-jest": ["workspace"],
+    "redhat.vscode-yaml": ["workspace"],
     "stylelint.vscode-stylelint": ["workspace"],
     "vscode-icons-team.vscode-icons": ["workspace"],
     "wallabyjs.quokka-vscode": ["workspace"]
