fix: update dependencies, remove oh-my-zsh plugin for npx that is no longer supported

--- a/.env
+++ b/.env
@@ -17,7 +17,7 @@ DEVCONTAINER_IMAGE_TAG_VERSION=lts
 DEVCONTAINER_PACKAGE_APT_PACKAGE_LIST=zsh
 
 # The PACKAGE_OH_MY_ZSH_PLUGINS to use.
-DEVCONTAINER_PACKAGE_OH_MY_ZSH_PLUGINS=( git node npm npx yarn )
+DEVCONTAINER_PACKAGE_OH_MY_ZSH_PLUGINS=( git node npm yarn )
 
 # The PACKAGE_OH_MY_ZSH_THEME to use.
 DEVCONTAINER_PACKAGE_OH_MY_ZSH_THEME=geoffgarside
