fix: update dependencies, reorganize fields and comments

--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,7 +1,7 @@
 ###########################################################################
-#                                                                         #
-# `node-projects` - Container - `docker-compose.yml`                      #
-#                                                                         #
+# `node-projects`                                                         #
+# `Container`                                                             #
+# `docker-compose.yml`                                                    #
 ###########################################################################
 
 # Specify the compose format that this file conforms to.
