--- a/.editorconfig
+++ b/.editorconfig
@@ -1,7 +1,7 @@
 ###########################################################################
-#                                                                         #
-# `node-projects` - Workspace - `.editorconfig`                           #
-#                                                                         #
+# `node-projects`                                                         #
+# `Workspace`                                                             #
+# `.editorconfig`                                                         #
 ###########################################################################
 
 # Must be specified in the preamble.
