--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 ###########################################################################
-#                                                                         #
-# `node-projects` - Workspace - `.env`                                    #
-#                                                                         #
+# `node-projects`                                                         #
+# `Container`                                                             #
+# `.env`                                                                  #
 ###########################################################################
 
 # The IMAGE_REPOSITORY to use.
@@ -33,3 +33,9 @@ DEVCONTAINER_USER_NAME=node
 
 # The USER_UID to use.
 DEVCONTAINER_USER_UID=${UID:-1000}
+
+###########################################################################
+# `node-projects`                                                         #
+# `Workspace`                                                             #
+# `.env`                                                                  #
+###########################################################################
