--- a/.gitattributes
+++ b/.gitattributes
@@ -1,7 +1,7 @@
 ###########################################################################
-#                                                                         #
-# `node-projects` - Workspace - `.gitattributes`                          #
-#                                                                         #
+# `node-projects`                                                         #
+# `Workspace`                                                             #
+# `.gitattributes`                                                        #
 ###########################################################################
 
 # Attributes for all files.
