--- a/.npmignore
+++ b/.npmignore
@@ -1,7 +1,7 @@
 ###########################################################################
-#                                                                         #
-# `node-projects` - Workspace - `.npmignore`                              #
-#                                                                         #
+# `node-projects`                                                         #
+# `Workspace`                                                             #
+# `.npmignore`                                                            #
 ###########################################################################
 
 # Build
