--- a/.npmrc
+++ b/.npmrc
@@ -1,7 +1,7 @@
 ###########################################################################
-#                                                                         #
-# `node-projects` - Workspace - `.npmrc`                                  #
-#                                                                         #
+# `node-projects`                                                         #
+# `Workspace`                                                             #
+# `.npmrc`                                                                #
 ###########################################################################
 
 # https://docs.npmjs.com/cli/v6/using-npm/config#dev
