--- a/.prettierignore
+++ b/.prettierignore
@@ -1,7 +1,7 @@
 ###########################################################################
-#                                                                         #
-# `node-projects` - Workspace - `.prettierignore`                         #
-#                                                                         #
+# `node-projects`                                                         #
+# `Workspace`                                                             #
+# `.prettierignore`                                                       #
 ###########################################################################
 
 # Build
