--- a/.yarnignore
+++ b/.yarnignore
@@ -1,7 +1,7 @@
 ###########################################################################
-#                                                                         #
-# `node-projects` - Workspace - `.yarnignore`                             #
-#                                                                         #
+# `node-projects`                                                         #
+# `Workspace`                                                             #
+# `.yarnignore`                                                           #
 ###########################################################################
 
 # Build
