--- a/.yarnrc
+++ b/.yarnrc
@@ -1,7 +1,7 @@
 ###########################################################################
-#                                                                         #
-# `node-projects` - Workspace - `.yarnrc`                                 #
-#                                                                         #
+# `node-projects`                                                         #
+# `Workspace`                                                             #
+# `.yarnrc`                                                               #
 ###########################################################################
 
 # https://classic.yarnpkg.com/en/docs/cli/config
