--- a/projects/.gitignore
+++ b/projects/.gitignore
@@ -1,7 +1,8 @@
 ###########################################################################
-#                                                                         #
-# `node-projects` - Workspace - projects - `.gitignore`                   #
-#                                                                         #
+# `node-projects`                                                         #
+# `Workspace`                                                             #
+# `projects`                                                              #
+# `.gitignore`                                                            #
 ###########################################################################
 
 # All files
