--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,7 +1,7 @@
 ###########################################################################
-#                                                                         #
-# `node-projects` - Container - `Dockerfile`                              #
-#                                                                         #
+# `node-projects`                                                         #
+# `Container`                                                             #
+# `Dockerfile`                                                            #
 ###########################################################################
 
 # [image]
