--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,8 +1,8 @@
 {
   /***************************************************************************/
-  /*                                                                         */
-  /* `node-projects` - Workspace - `devcontainer.json`                       */
-  /*                                                                         */
+  /* `node-projects`                                                         */
+  /* `Workspace`                                                             */
+  /* `devcontainer.json`                                                     */
   /***************************************************************************/
 
   // Codespaces-specific configuration.
@@ -90,9 +90,9 @@
   // Machine specific settings that should be copied into the container.
   "settings": {
     /***************************************************************************/
-    /*                                                                         */
-    /* `node-projects` - Container - `settings.json`                           */
-    /*                                                                         */
+    /* `node-projects`                                                         */
+    /* `Container`                                                             */
+    /* `settings.json`                                                         */
     /***************************************************************************/
 
     /* `terminal` */
@@ -101,15 +101,16 @@
     "terminal.integrated.shell.linux": "/bin/zsh",
 
     /***************************************************************************/
-    /*                                                                         */
-    /* `node-projects` - Container - Extensions - `settings.json`              */
-    /*                                                                         */
+    /* `node-projects`                                                         */
+    /* `Container`                                                             */
+    /* `Extensions`                                                            */
+    /* `settings.json`                                                         */
     /***************************************************************************/
 
     /***************************************************************************/
-    /*                                                                         */
-    /* `node-projects` - Workspace - `settings.json`                           */
-    /*                                                                         */
+    /* `node-projects`                                                         */
+    /* `Workspace`                                                             */
+    /* `settings.json`                                                         */
     /***************************************************************************/
 
     /* `[<language>]` */
@@ -262,9 +263,10 @@
     "workbench.editor.focusRecentEditorAfterClose": false,
 
     /***************************************************************************/
-    /*                                                                         */
-    /* `node-projects` - Workspace - Extensions - `settings.json`              */
-    /*                                                                         */
+    /* `node-projects`                                                         */
+    /* `Workspace`                                                             */
+    /* `Extensions`                                                            */
+    /* `settings.json`                                                         */
     /***************************************************************************/
 
     /* `editor` */
@@ -779,9 +781,10 @@
   // "userEnvProbe": "none",
 
   /***************************************************************************/
-  /*                                                                         */
-  /* `node-projects` - Workspace - Docker - `devcontainer.json`              */
-  /*                                                                         */
+  /* `node-projects`                                                         */
+  /* `Workspace`                                                             */
+  /* `Docker`                                                                */
+  /* `devcontainer.json`                                                     */
   /***************************************************************************/
 
   // Application ports that are exposed by the container.
@@ -867,9 +870,10 @@
   // "workspaceMount": "",
 
   /***************************************************************************/
-  /*                                                                         */
-  /* `node-projects` - Workspace - Docker Compose - `devcontainer.json`      */
-  /*                                                                         */
+  /* `node-projects`                                                         */
+  /* `Workspace`                                                             */
+  /* `Docker Compose`                                                        */
+  /* `devcontainer.json`                                                     */
   /***************************************************************************/
 
   // The name of the docker-compose file(s) used to start the services.
