--- a/.dockerignore
+++ b/.dockerignore
@@ -1,7 +1,7 @@
 ###########################################################################
-#                                                                         #
-# `node-projects` - Workspace - `.dockerignore`                           #
-#                                                                         #
+# `node-projects`                                                         #
+# `Workspace`                                                             #
+# `.dockerignore`                                                         #
 ###########################################################################
 
 # Build
