--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 ###########################################################################
-#                                                                         #
-# `node-projects` - Workspace - `.gitignore`                              #
-#                                                                         #
+# `node-projects`                                                         #
+# `Workspace`                                                             #
+# `.gitignore`                                                            #
 ###########################################################################
 
 # Build
